# ScrapingPGE

./: README.md  first_step_name_and_description_url.xlsx  formattingExcel.ipynb  pyproject.toml  requirements_scraping.txt  scraped_companies.xlsx  scraped_companies_job_teaser.xlsx  scraped_schools.xlsx  scrapingCompaniesJobTeaser.ipynb  scrapingCompaniesWelcomeJungle.ipynb  scrapingDiplomeo.ipynb  scrapingSchoolsWebsites.ipynb  websites_schools.xlsx  websites_schools_results_2.xlsx
