[project]
name = "scrapingpge"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook (>=7.4.5,<8.0.0)",
    "jupyterlab (>=4.4.6,<5.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "selenium (>=4.35.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "openai (>=1.101.0,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "scrapingpge", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
